Fixing findbugs warnings.